<resources>
    <string name="app_name">Riks Kampen</string>


    <string name="button_login">Login</string>

    <string name="button_signup">Sign up</string>

    <string name="button_join">Join Riks Kampen</string>
    <string name="usename_text">User Name</string>
    <string name="name_text">Name</string>
    <string name="password_text">Password</string>


    <string name="user_email_hint">Email</string>


    <string name="user_pass_hint">Password</string>
    <string name="user_pass_hint_c">Confirm Password</string>
    <string name="user_desig_hint">designation</string>
    <string name="user_nam_hint">Name</string>

    <string name="button_skip">Skip</string>


    <string name="user_fnam_hint">First name</string>
    <string name="user_lnam_hint">Last name</string>
    <string name="title_activity_leader_board">LeaderBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_leader">MainLeaderActivity</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_history">Order History</string>
    <string name="title_profile">Profile</string>
    <string name="title_me">Me</string>
    <string name="title_leader">Leader Board</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_rationale_location">Why we need your location...</string>
    <string name="location_permission_denied">Location permission denied</string>


    <string name="intro_txt">The National Championship is an online-based PT-led contest where the participants shall compete in making the biggest change over 10 weeks. The competition aims at better health and is a fight against osunda
habits, as sedentary, unhealthy diet and dependency. To assist, the participant will be able to take part training videos and dietary tips from personal coaches.
The participants compete for $ 100,000 in prize money.</string>


    <string name="text_des">Primarily the shoulder muscles and the deltoids are worked in this exercise, but other muscles such as the trapezius at the back of the neck and back, the triceps at the back of the upper arm, and the upper chest are also recruited.</string>


    <string-array name="Spinner_Content">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>


    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>


    //edit profile

    <string name="edit_profile_dialog_pos_button">Update</string>

    <string name="edit_profile_dialog_nag_button">Cancel</string>


</resources>
