<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_apps_black_24dp"
        android:title="@string/title_me" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />


    <item
        android:id="@+id/navigation_order_history"
        android:icon="@drawable/ic_store_mall_directory_black_24dp"
        android:title="@string/title_history" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_apps_black_24dp"
        android:title="@string/title_profile" />

</menu>
