<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".SignUpActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"


        android:layout_marginRight="8dp"
        android:src="@drawable/ic_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editText_fullName"
        fontPath="fonts/MontserratAlternates-Regular.ttf"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="Name"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:text=""
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />





    <EditText
        android:id="@+id/editText_email"
        fontPath="fonts/MontserratAlternates-Regular.ttf"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/user_email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:text=""
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_fullName" />


    <EditText
        android:id="@+id/editText_pass"
        fontPath="fonts/MontserratAlternates-Regular.ttf"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/user_pass_hint"
        android:inputType="numberPassword"
        android:maxLength="30"
        android:text=""
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <EditText
        android:id="@+id/editText_pass_c"
        fontPath="fonts/MontserratAlternates-Regular.ttf"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/user_pass_hint_c"
        android:inputType="numberPassword"
        android:maxLength="30"
        android:text=""
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_pass" />


    <EditText
        android:id="@+id/editText_Age"
        fontPath="fonts/MontserratAlternates-Regular.ttf"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:focusable="false"
        android:gravity="center_vertical"
        android:hint="Date of birth"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:text=""
        android:clickable="true"
        android:onClick="onAgeClick"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_pass_c"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/editTextHeight"

        fontPath="fonts/MontserratAlternates-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:hint="Height in cm"
        android:text=""
        android:inputType="number"
        android:textSize="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Age" />


   <!-- <EditText
        android:id="@+id/editText_Height_F"
        fontPath="fonts/MontserratAlternates-Regular.ttf"
        android:layout_width="60dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:text=""
        android:hint="ft"
        android:clickable="true"
        android:focusable="false"
        android:onClick="onHeightInFeetClick"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/textViewHeight"
        app:layout_constraintTop_toBottomOf="@+id/editText_Age" />


    <EditText
        android:id="@+id/editText_Height_I"
        fontPath="fonts/MontserratAlternates-Regular.ttf"
        android:layout_width="60dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="center"
        android:hint="in"
        android:paddingLeft="5dp"
        android:text=""
        android:clickable="true"
        android:focusable="false"
        android:onClick="onHeightInIncheClick"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/editText_Age"
        app:layout_constraintStart_toEndOf="@id/editText_Height_F"
        app:layout_constraintTop_toBottomOf="@+id/editText_Age" />-->


    <EditText
        android:id="@+id/editText_Weight"
        fontPath="fonts/MontserratAlternates-Regular.ttf"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorPrimaryDark"

        android:clickable="true"
        android:ems="10"

        android:focusable="false"
        android:gravity="center_vertical"
        android:hint="Weight in kg"
        android:maxLength="30"
        android:onClick="onWeightClick"
        android:text=""

        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHeight" />


    <EditText

        android:id="@+id/editText_Sex"
        fontPath="fonts/MontserratAlternates-Regular.ttf"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:focusable="false"
        android:gravity="center_vertical"
        android:hint="Sex"
        android:clickable="true"
        android:onClick="onSexClick"
        android:maxLength="30"
        android:text=""
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Weight"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/button_signup"
        fontPath="fonts/MontserratAlternates-Bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onNextClick"
        android:text="Sign up"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Sex" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"

        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_signup">


        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:rotation="180"
            android:src="@drawable/ic_next" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onBackClick"
            android:text="Back"
            android:textSize="18dp" />

    </LinearLayout>






</android.support.constraint.ConstraintLayout>